; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpJson.c_httpJsonObject.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_httpJson.c_httpJsonObject.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JsonObjStt = common dso_local global i32 0, align 4
@JsonObjEnd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @httpJsonObject(i32* %0, i32 (i32*, i8*)* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32 (i32*, i8*)*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 (i32*, i8*)* %1, i32 (i32*, i8*)** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @httpJsonItemToken(i32* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @JsonObjStt, align 4
  %11 = call i32 @httpJsonToken(i32* %9, i32 %10)
  %12 = load i32 (i32*, i8*)*, i32 (i32*, i8*)** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 %12(i32* %13, i8* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* @JsonObjEnd, align 4
  %18 = call i32 @httpJsonToken(i32* %16, i32 %17)
  ret void
}

declare dso_local i32 @httpJsonItemToken(i32*) #1

declare dso_local i32 @httpJsonToken(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
